--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0     536365    85123A  2010     12    3     8   \n",
+       "1     536365     71053  2010     12    3     8   \n",
+       "2     536365    84406B  2010     12    3     8   \n",
+       "3     536365    84029G  2010     12    3     8   \n",
+       "4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0       2.55       17850  United Kingdom         15.30  \n",
+       "1       3.39       17850  United Kingdom         20.34  \n",
+       "2       2.75       17850  United Kingdom         22.00  \n",
+       "3       3.39       17850  United Kingdom         20.34  \n",
+       "4       3.39       17850  United Kingdom         20.34  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "#your code here\n",
+    "\n",
+    "# Extract and import Orders dataset\n",
+    "orders = pd.read_csv('Orders.csv')\n",
+    "\n",
+    "# Remove the first column as it's equal to the index\n",
+    "orders.drop(columns=orders.columns[0], axis=1, inplace=True)\n",
+    "\n",
+    "# Display the first few rows of the dataset to get an overview\n",
+    "orders.head()\n"
    ]
   },
   {
@@ -81,11 +239,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   CustomerID  amount_spent\n",
+      "0       12346      77183.60\n",
+      "1       12347       4310.00\n",
+      "2       12348       1797.24\n",
+      "3       12349       1757.55\n",
+      "4       12350        334.40\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# Aggregate the amount_spent for each unique customer\n",
+    "customer_spending = orders.groupby('CustomerID')['amount_spent'].sum().reset_index()\n",
+    "\n",
+    "# Print the head to check the result\n",
+    "print(customer_spending.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of VIP customers: 217\n",
+      "Number of Preferred customers: 868\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the 75th and 95th percentiles for amount_spent\n",
+    "q75 = aggregation['amount_spent'].quantile(0.75)  # 75th percentile\n",
+    "q95 = aggregation['amount_spent'].quantile(0.95)  # 95th percentile\n",
+    "\n",
+    "# Select VIP customers (those who spent more than the 95th percentile)\n",
+    "vip = aggregation[aggregation['amount_spent'] > q95]\n",
+    "\n",
+    "# Select Preferred customers (those whose spending is between the 75th and 95th percentiles)\n",
+    "preferred = aggregation[(q75 < aggregation['amount_spent']) & (aggregation['amount_spent'] <= q95)]\n",
+    "\n",
+    "# Print the number of VIP and Preferred customers\n",
+    "print(f\"Number of VIP customers: {len(vip)}\")\n",
+    "print(f\"Number of Preferred customers: {len(preferred)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   CustomerID  amount_spent      label\n",
+      "0       12346      77183.60        VIP\n",
+      "1       12347       4310.00  Preferred\n",
+      "2       12348       1797.24  Preferred\n",
+      "3       12349       1757.55  Preferred\n",
+      "4       12350        334.40    Regular\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First, calculate the 75th and 95th percentiles for amount_spent\n",
+    "q75 = aggregation['amount_spent'].quantile(0.75)\n",
+    "q95 = aggregation['amount_spent'].quantile(0.95)\n",
+    "\n",
+    "# Create a new column 'label' and initially set it as 'Regular'\n",
+    "aggregation['label'] = 'Regular'\n",
+    "\n",
+    "# Label VIP customers (those who spent more than the 95th percentile)\n",
+    "aggregation.loc[aggregation['amount_spent'] > q95, 'label'] = 'VIP'\n",
+    "\n",
+    "# Label Preferred customers (those whose spending is between the 75th and 95th percentiles)\n",
+    "aggregation.loc[(aggregation['amount_spent'] > q75) & (aggregation['amount_spent'] <= q95), 'label'] = 'Preferred'\n",
+    "\n",
+    "# Print the head of the aggregation dataframe with the new labels\n",
+    "print(aggregation.head())\n"
    ]
   },
   {
@@ -99,11 +341,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The country with the most VIP customers is:\n",
+      "           Country  VIP_Customer_Count\n",
+      "17  United Kingdom               84185\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Step 1: Filter the aggregation dataframe to include only VIP customers\n",
+    "vip_customers = aggregation[aggregation['label'] == 'VIP']\n",
+    "\n",
+    "# Check if 'Country' column exists, if not, merge with the original orders dataframe to get it\n",
+    "if 'Country' not in vip_customers.columns:\n",
+    "    # Assuming 'CustomerID' is the key to merge with the original orders dataframe\n",
+    "    vip_customers = vip_customers.merge(orders[['CustomerID', 'Country']], on='CustomerID', how='left')\n",
+    "\n",
+    "# Step 2: Group by Country and count the number of VIP customers in each country\n",
+    "vip_by_country = vip_customers.groupby('Country')['CustomerID'].count().reset_index()\n",
+    "\n",
+    "# Rename the column for better clarity\n",
+    "vip_by_country.columns = ['Country', 'VIP_Customer_Count']\n",
+    "\n",
+    "# Step 3: Identify the country with the most VIP customers\n",
+    "most_vip_country = vip_by_country.sort_values(by='VIP_Customer_Count', ascending=False).head(1)\n",
+    "\n",
+    "# Print the country with the most VIP customers\n",
+    "print(f\"The country with the most VIP customers is:\\n{most_vip_country}\")\n"
    ]
   },
   {
@@ -115,17 +385,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The country with the most VIP + Preferred customers is:\n",
+      "           Country  VIP_Preferred_Customer_Count\n",
+      "26  United Kingdom                        221635\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Filter the aggregation dataframe to include both VIP and Preferred customers\n",
+    "vip_preferred_customers = aggregation[aggregation['label'].isin(['VIP', 'Preferred'])]\n",
+    "\n",
+    "# Check if 'Country' column exists, if not, merge with the original orders dataframe to get it\n",
+    "if 'Country' not in vip_preferred_customers.columns:\n",
+    "    # Assuming 'CustomerID' is the key to merge with the original orders dataframe\n",
+    "    vip_preferred_customers = vip_preferred_customers.merge(orders[['CustomerID', 'Country']], on='CustomerID', how='left')\n",
+    "\n",
+    "# Step 2: Group by Country and count the number of VIP + Preferred customers in each country\n",
+    "vip_preferred_by_country = vip_preferred_customers.groupby('Country')['CustomerID'].count().reset_index()\n",
+    "\n",
+    "# Rename the column for better clarity\n",
+    "vip_preferred_by_country.columns = ['Country', 'VIP_Preferred_Customer_Count']\n",
+    "\n",
+    "# Step 3: Identify the country with the most VIP + Preferred customers\n",
+    "most_vip_preferred_country = vip_preferred_by_country.sort_values(by='VIP_Preferred_Customer_Count', ascending=False).head(1)\n",
+    "\n",
+    "# Print the country with the most VIP + Preferred customers\n",
+    "print(f\"The country with the most VIP + Preferred customers is:\\n{most_vip_preferred_country}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -139,9 +444,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
